disable autocomplete for passphrase and privatekey

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                                 <label class="control-label" for="pass">Passphrase</label>
                                 <div class="controls">
                                     <div class="input-append">
-                                        <input class="span5" id="pass" type="text"></button>
+                                        <input class="span5" id="pass" type="text" autocomplete="off"></button>
                                     </div>
                                 </div>
                             </div>
@@ -200,7 +200,7 @@
                 <div class="control-group">
                     <label class="control-label" for="txSec">Private Key</label>
                     <div class="controls">
-                        <input class="span5" id="txSec" type="text">
+                        <input class="span5" id="txSec" type="text" autocomplete="off">
                         <span class="help-inline errormsg"></span>
                     </div>
                 </div>
